--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,15 @@
  *= require_self
  *= require_tree .
  */
+
+body {
+	padding: 40px;
+}
+
+@font-face {font-family:"Alako-Bold";src:url("Alakob.eot?") format("eot"),url("Alakob.woff") format("woff"),url("Alakob.ttf") format("truetype"),url("Alakob.svg#Alako-Bold") format("svg");font-weight:normal;font-style:normal;}
+
+#title-me{
+	font-family: "Alako-Bold";
+	font-size: 2.5em;
+	color: black;
+}
