Installed Login and Registration System.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
 		</div>
 	</div>
 	<div class="container"> 
+	<p class="notice"></p>
+       <p class="alert alert-info"><button type="button" class="close" data-dismiss="alert">&times;</button><%= alert %><b>Heads up!</b>  Trexr is still in developer stages!</p>
 		<%= yield %>
 	</div>
 </body>
