--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,14 +12,18 @@
  *= require_tree .
  */
 
+ /* This is my source, motherfucker. SUDO APT-GET INSTALL GEM */
+
 body {
 	padding: 40px;
 }
 
-@font-face {font-family:"Alako-Bold";src:url("Alakob.eot?") format("eot"),url("Alakob.woff") format("woff"),url("Alakob.ttf") format("truetype"),url("Alakob.svg#Alako-Bold") format("svg");font-weight:normal;font-style:normal;}
+@font-face {font-family:"Alako-Bold";src:url("Alakob.eot?") format("eot"),url("http://tomgouder.host-ed.me/Alako-Bold.ttf") format("woff"),url("Alakob.ttf") format("truetype"),url("Alakob.svg#Alako-Bold") format("svg");font-weight:normal;font-style:normal;}
 
 #title-me{
 	font-family: "Alako-Bold";
 	font-size: 2.5em;
 	color: black;
+	padding: 10px 0px 0px 0px;
+
 }
