--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h1>Recent Updates</h1>
 </div>
- <%= link_to "Post New Status", new_status_path, class:"btn btn-success" %></br></br>
+ <%= link_to "Post New Status", new_status_path, class:"btn btn-info" %></br></br>
 
 <% @statuses.each do |status| %>
   <div class="status">
